// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user utils CreateOrUpdateUser creates backend user if not existed 1`] = `
Object {
  "_cursor": undefined,
  "_score": undefined,
  "appId": "TEST_BACKEND",
  "appUserId": "testUser2",
  "avatarData": "{\\"accessory\\":\\"mask\\"}",
  "avatarType": "OpenPeeps",
  "createdAt": "2020-10-10T00:00:00.000Z",
  "highlight": undefined,
  "id": "6LOqD_3gpe4ZVaxRvemf7KNTfm6y3WNBu1hbs-5MRdSWiWVss",
  "inner_hits": undefined,
  "lastActiveAt": "2020-10-10T00:00:00.000Z",
  "name": "Friendly Neighborhood Spider Man",
  "updatedAt": "2020-10-10T00:00:00.000Z",
}
`;

exports[`user utils CreateOrUpdateUser creates backend user if not existed 2`] = `
Object {
  "appId": "TEST_BACKEND",
  "appUserId": "testUser2",
  "avatarData": "{\\"accessory\\":\\"mask\\"}",
  "avatarType": "OpenPeeps",
  "createdAt": "2020-10-10T00:00:00.000Z",
  "lastActiveAt": "2020-10-10T00:00:00.000Z",
  "name": "Friendly Neighborhood Spider Man",
  "updatedAt": "2020-10-10T00:00:00.000Z",
}
`;

exports[`user utils CreateOrUpdateUser fills appId for website users 1`] = `
Object {
  "_cursor": undefined,
  "_score": undefined,
  "appId": "WEBSITE",
  "highlight": undefined,
  "id": "web-user",
  "inner_hits": undefined,
  "lastActiveAt": "2020-10-10T01:00:00.000Z",
  "name": "Web user",
}
`;

exports[`user utils CreateOrUpdateUser logs error if collision occurs 1`] = `
Object {
  "_cursor": undefined,
  "_score": undefined,
  "appId": "TEST_BACKEND",
  "appUserId": "testUser1",
  "highlight": undefined,
  "id": "6LOqD_QabTT7XXTrsz7ybEa5PLfc0GfXlV578HYPhODPfSWc8",
  "inner_hits": undefined,
  "lastActiveAt": "2020-10-10T01:00:00.000Z",
  "name": "test user 1",
}
`;

exports[`user utils CreateOrUpdateUser logs error if collision occurs 2`] = `
Object {
  "appId": "TEST_BACKEND",
  "appUserId": "testUser1",
  "lastActiveAt": "2020-10-10T01:00:00.000Z",
  "name": "test user 1",
}
`;

exports[`user utils CreateOrUpdateUser logs error if collision occurs 3`] = `
Array [
  Array [
    "createBackendUserError: collision found! testUser1 and testUser3 both hash to 6LOqD_QabTT7XXTrsz7ybEa5PLfc0GfXlV578HYPhODPfSWc8",
  ],
]
`;

exports[`user utils CreateOrUpdateUser updates backend users' last active time if user already existed 1`] = `
Object {
  "_cursor": undefined,
  "_score": undefined,
  "appId": "TEST_BACKEND",
  "appUserId": "testUser1",
  "highlight": undefined,
  "id": "6LOqD_QabTT7XXTrsz7ybEa5PLfc0GfXlV578HYPhODPfSWc8",
  "inner_hits": undefined,
  "lastActiveAt": "2020-10-10T01:00:00.000Z",
  "name": "test user 1",
}
`;

exports[`user utils CreateOrUpdateUser updates backend users' last active time if user already existed 2`] = `
Object {
  "appId": "TEST_BACKEND",
  "appUserId": "testUser1",
  "lastActiveAt": "2020-10-10T01:00:00.000Z",
  "name": "test user 1",
}
`;
